--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 	</div>
 	<div id="content">
 		<div id="buttons">
+			<div id="github">
+				<img src="images/github-logo.png" alt="Source code" />
+				<br />
+				<span>GITHUB: source code</span>
+			</div>
+			<div id="jira">
+				<img src="images/jira-logo.png" alt="Project home page" />
+				<br />
+				<span>JIRASTUDIO: wiki, issues, builds</span>
+			</div>
+			<div id="maven">
+				<img src="images/maven-logo.png" alt="Maven artifacts" />
+				<br />
+				<span>MAVEN: artifacts</span>
+			</div>
 		</div>
 		<div id="description">
 		</div>
