Adds content section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>Log5F Homepage</title>
 <link type="text/css" rel="stylesheet" href="default.css" />
 </head>
 <body>
@@ -11,28 +11,55 @@
 	<div id="header">
 		<img id="logo" src="images/log5f-logo.png" alt="Log5F logo" />
 		<div id="welcome">
-			<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+			<span class="title1">Log5F is logging tool written in ActionScript 3.0 for  Flash/Flex/AIR</span>
 		</div>
 	</div>
-	<div id="content">
-		<div id="buttons">
+	<div id="body">
+		<div id="buttons" align="center">
 			<div id="github">
 				<img src="images/github-logo.png" alt="Source code" />
-				<br />
-				<span>GITHUB: source code</span>
+				<div class="caption">
+					<span class="text"><font class="title">GITHUB:</font> source code</span>
+				</div>
 			</div>
 			<div id="jira">
 				<img src="images/jira-logo.png" alt="Project home page" />
-				<br />
-				<span>JIRASTUDIO: wiki, issues, builds</span>
+				<div class="caption">
+					<span class="text"><font class="title">JIRASTUDIO:</font> wiki, issues, builds</span>
+				</div>
 			</div>
 			<div id="maven">
 				<img src="images/maven-logo.png" alt="Maven artifacts" />
-				<br />
-				<span>MAVEN: artifacts</span>
+				<div class="caption">
+					<span class="text"><font class="title">MAVEN:</font> artifacts</span>
+				</div>
 			</div>
 		</div>
-		<div id="description">
+		<div id="content">
+			<div id="what-is-it">
+				<div class="section">
+					<span class="title">WHAT IS IT</span>
+					<p class="text">
+						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+					</p>
+				</div>
+			</div>
+			<div id="how-to-use">
+				<div class="section">
+					<span class="title">HOW TO USE</span>
+					<p class="text">
+						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+					</p>
+				</div>
+			</div>
+			<div id="where-to-get">
+				<div class="section">
+					<span class="title">WHERE TO GET</span>
+					<p class="text">
+						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="footer">
