Adds Fontkit support

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Log5F Homepage</title>
+<script type="text/javascript" src="http://use.typekit.com/ixr8rer.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link type="text/css" rel="stylesheet" href="default.css" />
 </head>
 <body>
