--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <link type="text/css" rel="stylesheet" href="default.css" />
 </head>
 <body>
-
+<a href="https://github.com/log5f"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/6429057dfef9e98189338d22e7f6646c6694f032/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
 <div id="main">
 	<div id="header">
 		<img id="logo" src="images/log5f-logo.png" alt="Log5F logo" />
 		<div id="welcome">
-			<span class="title1">Log5F is logging tool written in ActionScript 3.0 for  Flash/Flex/AIR</span>
+			<span>Welcome to the Log5F's homepage, it is moved to GitHub, so <a href="#">fork it!</a></span>
 		</div>
 	</div>
 	<div id="body">
@@ -21,19 +21,19 @@
 			<div id="github">
 				<img src="images/github-logo.png" alt="Source code" />
 				<div class="caption">
-					<span class="text"><font class="title">GITHUB:</font> source code</span>
+					<span class="text"><font class="title">GITHUB:</font> <a href="#">source code</a></span>
 				</div>
 			</div>
 			<div id="jira">
 				<img src="images/jira-logo.png" alt="Project home page" />
 				<div class="caption">
-					<span class="text"><font class="title">JIRASTUDIO:</font> wiki, issues, builds</span>
+					<span class="text"><font class="title">JIRASTUDIO:</font> <a href="#">wiki</a>, <a href="#">issues</a>, <a href="#">builds</a></span>
 				</div>
 			</div>
 			<div id="maven">
 				<img src="images/maven-logo.png" alt="Maven artifacts" />
 				<div class="caption">
-					<span class="text"><font class="title">MAVEN:</font> artifacts</span>
+					<span class="text"><font class="title">MAVEN:</font> <a href="#">artifacts</a></span>
 				</div>
 			</div>
 		</div>
