--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 			<div id="github">
 				<img src="images/github-logo.png" alt="Source code" />
 				<div class="caption">
-					<span class="text"><font class="title">GITHUB:</font> <a href="#">source code</a></span>
+					<span class="text"><font class="title">GITHUB:</font> <a href="http://github.com/log5f">source code</a></span>
 				</div>
 			</div>
 			<div id="jira">
 				<img src="images/jira-logo.png" alt="Project home page" />
 				<div class="caption">
-					<span class="text"><font class="title">JIRASTUDIO:</font> <a href="#">wiki</a>, <a href="#">issues</a>, <a href="#">builds</a></span>
+					<span class="text"><font class="title">JIRASTUDIO:</font> <a href="http://log5f-lib.jira.com/wiki/display/LOG/Home">wiki</a>, <a href="http://log5f-lib.jira.com/browse/LOG">issues</a>, <a href="#">builds</a></span>
 				</div>
 			</div>
 			<div id="maven">
 				<img src="images/maven-logo.png" alt="Maven artifacts" />
 				<div class="caption">
-					<span class="text"><font class="title">MAVEN:</font> <a href="#">artifacts</a></span>
+					<span class="text"><font class="title">MAVEN:</font> <a href="http://search.maven.org/#browse%7C851878725">artifacts</a></span>
 				</div>
 			</div>
 		</div>
@@ -42,7 +42,8 @@
 				<div class="section">
 					<span class="title">WHAT IS IT</span>
 					<p class="text">
-						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+						TBD
+						<!--We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.-->
 					</p>
 				</div>
 			</div>
@@ -50,7 +51,7 @@
 				<div class="section">
 					<span class="title">HOW TO USE</span>
 					<p class="text">
-						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+						TBD
 					</p>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 				<div class="section">
 					<span class="title">WHERE TO GET</span>
 					<p class="text">
-						We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.
+						TBD
 					</p>
 				</div>
 			</div>
