Adds What is it

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<img id="logo" src="images/log5f-logo.png" alt="Log5F logo" />
 		<div id="welcome">
 			<span>Welcome to the Log5F's homepage, it is moved to GitHub, so <a href="#">fork it!</a></span>
+			<span>Log5F is an ActionScript 3.0 logging library, it adopts many things from Log4J</span>
 		</div>
 	</div>
 	<div id="body">
@@ -42,7 +43,9 @@
 				<div class="section">
 					<span class="title">WHAT IS IT</span>
 					<p class="text">
-						TBD
+						Log5F is <a href="http://en.wikipedia.org/wiki/Data_logging">logging</a> tool for Flash/Flex/AIR projects, it started in 2008 as a project that ports Log4J. 
+						Log5F support hierarchical loggers by package similar to Log4J. It does not provide any GUI to view logs, but can send logging data to many of them.
+						Log5F independent from Flex SDK, it can be used in pure Flash projects starting from Flash Player 9.0
 						<!--We accustomed to debug our applications, during this paramount development phase, we find a most problems that exist in application, but not all. Sometimes application contains bugs after project release, and when it happened, the finding of these bugs can be a laborious process. To make this process more easy we use logging.-->
 					</p>
 				</div>
