Fixes welcome mssg

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<div id="header">
 		<img id="logo" src="images/log5f-logo.png" alt="Log5F logo" />
 		<div id="welcome">
-			<span>Welcome to the Log5F's homepage, it is moved to GitHub, so <a href="#">fork it!</a></span>
-			<span>Log5F is an ActionScript 3.0 logging library, it adopts many things from Log4J</span>
+			<span>Log5F is logging library for Flash<br />that adopts many things</br>from Log4J</span>
 		</div>
 	</div>
 	<div id="body">
