--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <link type="text/css" rel="stylesheet" href="default.css" />
 </head>
 <body>
-<a href="https://github.com/log5f"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/6429057dfef9e98189338d22e7f6646c6694f032/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
+
 <div id="main">
 	<div id="header">
 		<img id="logo" src="images/log5f-logo.png" alt="Log5F logo" />
 		<div id="welcome">
-			<span>Log5F is logging library for Flash<br />that adopts many things</br>from Log4J</span>
+			<span>Log5F is logging library for Flash<br />it adopts many things</br>from Log4J</span>
 		</div>
 	</div>
 	<div id="body">
@@ -71,6 +71,9 @@
 		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
 	</div>
 </div>
-
+<div id="widgets">
+	<embed src="http://www.box.net/static/flash/widget_player.swf" type="application/x-shockwave-flash" flashvars="subString=folderId=kt9g06p3hg,color=000000,title=Demos" wmode="transparent" width="270" height="296">
+</div>
+<a href="https://github.com/log5f"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
