--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 </div>
 <div id="widgets">
 	<embed src="http://www.box.net/static/flash/widget_player.swf" type="application/x-shockwave-flash" flashvars="subString=folderId=kt9g06p3hg,color=000000,title=Demos" wmode="transparent" width="270" height="296">
+	<a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Member of The Internet Defense League" /></a>
 </div>
 <a href="https://github.com/log5f"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
 </body>
